--- a/Keysoc/Base.lproj/Main.storyboard
+++ b/Keysoc/Base.lproj/Main.storyboard
@@ -36,27 +36,71 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="710"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="fSG-pX-owj" customClass="customTableCell" customModule="Keysoc" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="117" id="fSG-pX-owj" customClass="customTableCell" customModule="Keysoc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="117"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fSG-pX-owj" id="vfo-1t-WtV">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="117"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXs-nh-TcJ">
-                                                    <rect key="frame" x="40" y="11.333333333333336" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mOX-LX-gh1">
+                                                    <rect key="frame" x="10" y="10" width="97" height="97"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="mOX-LX-gh1" secondAttribute="height" multiplier="1:1" id="cH8-a3-pet"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wFC-Rv-xrm">
+                                                    <rect key="frame" x="117" y="20.999999999999996" width="246" height="32.666666666666657"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXs-nh-TcJ">
+                                                            <rect key="frame" x="10" y="5.6666666666666679" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="LXs-nh-TcJ" firstAttribute="centerY" secondItem="wFC-Rv-xrm" secondAttribute="centerY" id="M1r-ZG-wxA"/>
+                                                        <constraint firstItem="LXs-nh-TcJ" firstAttribute="leading" secondItem="wFC-Rv-xrm" secondAttribute="leading" constant="10" id="nqD-Js-l33"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8uc-ML-9aK">
+                                                    <rect key="frame" x="117" y="63.666666666666657" width="246" height="32.333333333333343"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfv-Nl-99R">
+                                                            <rect key="frame" x="10" y="5.6666666666666643" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="lfv-Nl-99R" firstAttribute="centerY" secondItem="8uc-ML-9aK" secondAttribute="centerY" id="I3v-5J-0ZN"/>
+                                                        <constraint firstAttribute="height" constant="20" id="INM-N2-Lui"/>
+                                                        <constraint firstItem="lfv-Nl-99R" firstAttribute="leading" secondItem="8uc-ML-9aK" secondAttribute="leading" constant="10" id="tgK-Ul-eGS"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LXs-nh-TcJ" firstAttribute="leading" secondItem="vfo-1t-WtV" secondAttribute="leadingMargin" constant="20" id="18H-33-13z"/>
-                                                <constraint firstItem="LXs-nh-TcJ" firstAttribute="centerY" secondItem="vfo-1t-WtV" secondAttribute="centerY" id="wBA-oA-PTd"/>
+                                                <constraint firstItem="wFC-Rv-xrm" firstAttribute="top" secondItem="vfo-1t-WtV" secondAttribute="topMargin" constant="10" id="6Jz-ro-yEn"/>
+                                                <constraint firstAttribute="bottom" secondItem="mOX-LX-gh1" secondAttribute="bottom" constant="10" id="BBh-Wx-0iD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="8uc-ML-9aK" secondAttribute="bottom" constant="10" id="IsO-Aa-W5V"/>
+                                                <constraint firstItem="wFC-Rv-xrm" firstAttribute="leading" secondItem="mOX-LX-gh1" secondAttribute="trailing" constant="10" id="NMu-Kp-Kwp"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wFC-Rv-xrm" secondAttribute="trailing" constant="10" id="Thg-pR-Pja"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="8uc-ML-9aK" secondAttribute="trailing" constant="10" id="UKE-su-r6L"/>
+                                                <constraint firstItem="mOX-LX-gh1" firstAttribute="top" secondItem="vfo-1t-WtV" secondAttribute="top" constant="10" id="Wsr-af-hlU"/>
+                                                <constraint firstItem="mOX-LX-gh1" firstAttribute="leading" secondItem="vfo-1t-WtV" secondAttribute="leading" constant="10" id="bAW-dO-4Dx"/>
+                                                <constraint firstItem="8uc-ML-9aK" firstAttribute="top" secondItem="wFC-Rv-xrm" secondAttribute="bottom" constant="10" id="bIf-RJ-n7N"/>
+                                                <constraint firstItem="8uc-ML-9aK" firstAttribute="height" secondItem="wFC-Rv-xrm" secondAttribute="height" id="cVM-v0-vbv"/>
+                                                <constraint firstItem="8uc-ML-9aK" firstAttribute="leading" secondItem="mOX-LX-gh1" secondAttribute="trailing" constant="10" id="vDi-s7-M2t"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="label_title" destination="LXs-nh-TcJ" id="Xez-WU-EH5"/>
+                                            <outlet property="imageview_thumbnail" destination="mOX-LX-gh1" id="BD4-rC-8Bz"/>
+                                            <outlet property="label_artistName" destination="lfv-Nl-99R" id="ZhB-Ny-UO9"/>
+                                            <outlet property="label_trackName" destination="LXs-nh-TcJ" id="Xez-WU-EH5"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -78,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qLH-22-pFu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="594" y="-160"/>
+            <point key="canvasLocation" x="593.12977099236639" y="-160.56338028169014"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7ch-UA-crW">
