--- a/Keysoc/Base.lproj/Main.storyboard
+++ b/Keysoc/Base.lproj/Main.storyboard
@@ -36,24 +36,24 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="710"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="117" id="fSG-pX-owj" customClass="customTableCell" customModule="Keysoc" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="117"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="110" id="fSG-pX-owj" customClass="customTableCell" customModule="Keysoc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="110"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fSG-pX-owj" id="vfo-1t-WtV">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="117"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mOX-LX-gh1">
-                                                    <rect key="frame" x="10" y="10" width="97" height="97"/>
+                                                    <rect key="frame" x="10" y="10" width="90" height="90"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="mOX-LX-gh1" secondAttribute="height" multiplier="1:1" id="cH8-a3-pet"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wFC-Rv-xrm">
-                                                    <rect key="frame" x="117" y="20.999999999999996" width="246" height="32.666666666666657"/>
+                                                    <rect key="frame" x="110" y="21" width="253" height="29"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXs-nh-TcJ">
-                                                            <rect key="frame" x="10" y="5.6666666666666679" width="42" height="21"/>
+                                                            <rect key="frame" x="10" y="4" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -66,10 +66,10 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8uc-ML-9aK">
-                                                    <rect key="frame" x="117" y="63.666666666666657" width="246" height="32.333333333333343"/>
+                                                    <rect key="frame" x="110" y="60" width="253" height="29"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfv-Nl-99R">
-                                                            <rect key="frame" x="10" y="5.6666666666666643" width="42" height="21"/>
+                                                            <rect key="frame" x="10" y="4" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -103,14 +103,14 @@
                                             <outlet property="label_trackName" destination="LXs-nh-TcJ" id="Xez-WU-EH5"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="loadMoreCell" rowHeight="75" id="uJm-Ov-S7a">
-                                        <rect key="frame" x="0.0" y="167" width="393" height="75"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="loadMoreCell" rowHeight="75" id="uJm-Ov-S7a" customClass="customTableCell2" customModule="Keysoc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="160" width="393" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uJm-Ov-S7a" id="sLB-Ln-8to">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="gdf-JO-leU">
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="gdf-JO-leU">
                                                     <rect key="frame" x="178" y="19" width="37" height="37"/>
                                                 </activityIndicatorView>
                                             </subviews>
@@ -119,6 +119,9 @@
                                                 <constraint firstItem="gdf-JO-leU" firstAttribute="centerX" secondItem="sLB-Ln-8to" secondAttribute="centerX" id="lF8-rI-REj"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="loadingIndicator" destination="gdf-JO-leU" id="dH4-MM-eiT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
